# key-transparency

./: .gitignore  Cargo.toml  README.md  ozks-multi-epoch-large-batch-results.txt
.github/workflows/: rust.yml
bench/: Cargo.toml  results.txt
bench/src/: idp_client.rs  main.rs  micro_benchmark.rs  payload_generator.rs  utils.rs  witness_client.rs
config/: Cargo.toml
config/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
crypto/src/tests/: crypto_tests.rs
idp/: Cargo.toml
idp/src/: aggregator.rs  batcher.rs  lib.rs  main.rs  prover.rs  publisher.rs  synchronizer.rs
idp/tests/: publish_tests.rs
messages/: Cargo.toml
messages/src/: error.rs  lib.rs  publish.rs  sync.rs  update.rs
messages/src/tests/: publish_tests.rs
messages/tests/: publish_tests.rs
network/: Cargo.toml
scripts/: .gitignore  fabfile.py  settings.json
scripts/benchmark/: aggregate.py  commands.py  config.py  local.py  logs.py  plot.py  remote.py  settings.py  utils.py
scripts/results/: bench-0-10-1-True-100.txt  bench-0-10-1-True-1000.txt  bench-0-10-1-True-110.txt  bench-0-10-1-True-1100.txt  bench-0-10-1-True-120.txt  bench-0-10-1-True-1200.txt  bench-0-10-1-True-130.txt  bench-0-10-1-True-1300.txt  bench-0-10-1-True-140.txt  bench-0-10-1-True-1400.txt  bench-0-10-1-True-1500.txt  bench-0-10-1-True-200.txt  bench-0-10-1-True-300.txt  bench-0-10-1-True-350.txt  bench-0-10-1-True-400.txt  bench-0-10-1-True-500.txt  bench-0-10-1-True-600.txt  bench-0-10-1-True-700.txt  bench-0-10-1-True-800.txt  bench-0-10-1-True-900.txt  bench-0-20-1-True-100.txt  bench-0-20-1-True-1000.txt  bench-0-20-1-True-1100.txt  bench-0-20-1-True-200.txt  bench-0-20-1-True-300.txt  bench-0-20-1-True-400.txt  bench-0-20-1-True-500.txt  bench-0-20-1-True-600.txt  bench-0-20-1-True-700.txt  bench-0-20-1-True-800.txt  bench-0-20-1-True-900.txt  bench-0-50-1-True-100.txt  bench-0-50-1-True-1000.txt  bench-0-50-1-True-200.txt  bench-0-50-1-True-300.txt  bench-0-50-1-True-800.txt  bench-0-50-1-True-900.txt  bench-1-10-1-True-100.txt  bench-1-10-1-True-1000.txt  bench-1-10-1-True-1100.txt  (+19 more)
storage/: Cargo.toml
storage/src/: akd_storage.rs  lib.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
witness/: Cargo.toml
witness/src/: core_handler.rs  error.rs  lib.rs  main.rs  publish_handler.rs  sync_handler.rs  sync_helper.rs
witness/tests/: common.rs  publish_tests.rs  sync_tests.rs
