[package]
name = "config"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.30"
serde_json = "1.0.75"

crypto = { path = "../crypto" }
