[package]
name = "idp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = ["rt", "sync", "time", "macros", "rt-multi-thread"] }
log = "0.4.14"
bincode = "1.3.3"
bytes = "1.1.0"
async-trait = "0.1.52"
clap = { version = "3.0.14", features = ["cargo"] }
anyhow = "1.0.53"
env_logger = "0.9.0"
futures = "0.3.19"

crypto = { path = "../crypto" }
config = { path = "../config" }
storage = { path = "../storage" }
network = { path = "../network" }
messages = { path = "../messages" }

[dependencies.akd]
git = "https://github.com/asonnino/akd"
rev = "fc2f32f13910e6111b7f34aac9fe36717c22b762"
features = ["serde_serialization"]

[dev-dependencies]
test_utils = { path = "../test_utils" }
function_name = "0.2.0"

[features]
benchmark = []