[package]
name = "messages"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "1.0.1"
thiserror = "1.0.30"
serde = { version = "1.0.133", features = ["derive"] }
bincode = "1.3.3"
winter-crypto = "0.2"
winter-math = "0.2"
winter-utils = "0.2"
futures = "0.3.19"
base64 = "0.13.0"

crypto = { path = "../crypto" }
config = { path = "../config" }

[dependencies.akd]
git = "https://github.com/asonnino/akd"
rev = "fc2f32f13910e6111b7f34aac9fe36717c22b762"
features = ["serde_serialization"]

[dev-dependencies]
test_utils = { path = "../test_utils" }
tokio = { version = "1.15.0", features = ["macros"] }