[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = ["sync"] }
rocksdb = "0.18.0"
async-trait = "0.1.52"
log = "0.4.14"
bincode = "1.3.3"

[dependencies.akd]
git = "https://github.com/asonnino/akd"
rev = "fc2f32f13910e6111b7f34aac9fe36717c22b762"
features = ["serde_serialization"]