[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
rand = "0.7.3"
bincode = "1.3.3"

crypto = { path = "../crypto" }
config = { path = "../config" }
storage = { path = "../storage" }
network = { path = "../network" }
messages = { path = "../messages" }
witness = { path = "../witness" }

[dependencies.akd]
version = "0.3.8"
git = "https://github.com/asonnino/akd"
branch = "main"