[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
rand = "0.7.3"
bincode = "1.3.3"
tokio = "1.15.0"
futures = "0.3.19"
tokio-util = { version = "0.6.9", features= ["codec"] }

crypto = { path = "../crypto" }
config = { path = "../config" }
storage = { path = "../storage" }
network = { path = "../network" }
messages = { path = "../messages" }
witness = { path = "../witness" }
idp = { path = "../idp" }

[dependencies.akd]
git = "https://github.com/asonnino/akd"
rev = "fc2f32f13910e6111b7f34aac9fe36717c22b762"
features = ["serde_serialization"]